--- a/.config/QtProject.conf
+++ b/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/chaos/camp videos, file:///home/chaos/camp videos/introclips, file:///home/chaos/camp videos/2020-07-11 14.35.08 Scott Shoup's Zoom Meeting 96716990354, file:///home/chaos, file:///home/chaos/Downloads
-lastVisited=file:///home/chaos
+history=file:///home/chaos/camp videos/introclips, file:///home/chaos/camp videos/2020-07-11 14.35.08 Scott Shoup's Zoom Meeting 96716990354, file:///home/chaos, file:///home/chaos/Downloads, file:///home/chaos/homework/sp22/net-monitering
+lastVisited=file:///home/chaos/homework/sp22/net-monitering
 qtVersion=5.15.2
 shortcuts=file:, file:///home/chaos
 sidebarWidth=83
