--- a/.config/sway/style.conf
+++ b/.config/sway/style.conf
@@ -1,7 +1,7 @@
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-font "xft:xos4 Terminus 10"
+font "xft:FiraCode 10"
 
 #                             <border>  <background>     <text>   <indicator> <child_border>
 client.focused               #c678dd   #282c34     #c678dd   #808080    #c678dd
