--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -124,7 +124,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Terminus
+    family: FiraCode
 
     # The `style` can be specified to pick a specific face.
     style: Bold
